--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,16 @@
-
-    <p>This is from the footer</p>
-    <script src="bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="javascripts/client.js"></script>
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-48 w3-xxlarge">
+  <a href="https://www.linkedin.com/in/d
+  inu-gherciu-580444162">
+    <i class="fa fa-linkedin w3-hover-opacity"></i>
+  </a>
+  <a href="https://www.twitter.com/gherciudinu">
+    <i class="fa fa-twitter w3-hover-opacity"></i>
+  </a>
+  <a href="https://www.facebook.com/dinu.gherciu">
+    <i class="fa fa-facebook-official w3-hover-opacity"></i>
+  </a>
+</footer>
 </body>
+
 </html>
