--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -1,10 +1,10 @@
 <% include partials/navigation.ejs %>
 
-    <div class="w3-padding-64">
+    <div class="w3-padding-64" style="height:100vh; width:100%">
         <div class="w3-half w3-grey w3-container" style="height:100%; width:100%">
             <div class="w3-center">
-                <h1 class="w3-wide w3-center">Contacts</h1>
-                <p class="w3-opacity w3-center"><i>Fan? Drop a note!</i></p>
+                <h1><%= title %></h1>
+                <p class="w3-opacity w3-center"><i><%= message %></i></p>
                 <div class="w3-row w3-padding-32">
                     <div class="w3-col m6 w3-large w3-margin-bottom">
                         <div class="w3-display-container">
