--- a/views/services.ejs
+++ b/views/services.ejs
@@ -1,31 +1,31 @@
 <% include partials/navigation.ejs %>
 
-  <div class="w3-padding-64">
+  <div class="w3-padding-64" style="height:100vh; width:100%">
     <div class="w3-half w3-khaki w3-container" style="height:100%; width:100%">
       <div class="w3-center">
-        <h1>Services</h1>
+        <h1><%= title %></h1>
         <div class="w3-row-padding">
           <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <div class="w3-display-topleft w3-black w3-padding">Performance</div>
+              <div class="w3-display-topleft w3-black w3-padding"><%= performance %></div>
               <img src="/images/performance.png" alt="grid" style="width:370px; height:236px">
             </div>
           </div>
           <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <div class="w3-display-topleft w3-black w3-padding">Stress</div>
+              <div class="w3-display-topleft w3-black w3-padding"><%= stress %></div>
               <img src="/images/stress.png" alt="stress" style="width:370px; height:236px">
             </div>
           </div>
           <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <div class="w3-display-topleft w3-black w3-padding">UI/UX</div>
+              <div class="w3-display-topleft w3-black w3-padding"><%= uiUx %></div>
               <img src="/images/selenium.png" alt="selenium" style="width:370px; height:236px">
             </div>
           </div>
           <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <div class="w3-display-topleft w3-black w3-padding">API</div>
+              <div class="w3-display-topleft w3-black w3-padding"><%= api %></div>
               <img src="/images/api.png" alt="api" style="width:370px; height:236px">
             </div>
           </div>
@@ -35,25 +35,25 @@
         <div class="w3-row-padding">
           <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <div class="w3-display-topleft w3-black w3-padding">BDD</div>
+              <div class="w3-display-topleft w3-black w3-padding"><%= bdd %></div>
               <img src="/images/BDD.png" alt="bdd" style="width:370px; height:236px">
             </div>
           </div>
           <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <div class="w3-display-topleft w3-black w3-padding">Unit</div>
+              <div class="w3-display-topleft w3-black w3-padding"><%= unit %></div>
               <img src="/images/unit.png" alt="unit" style="width:370px; height:236px">
             </div>
           </div>
           <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <div class="w3-display-topleft w3-black w3-padding">Mobile</div>
+              <div class="w3-display-topleft w3-black w3-padding"><%= mobile %></div>
               <img src="/images/mobile_app_testing.png" alt="mobile" style="width:370px; height:236px">
             </div>
           </div>
           <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <div class="w3-display-topleft w3-black w3-padding">Penetration</div>
+              <div class="w3-display-topleft w3-black w3-padding"><%= penetration %></div>
               <img src="/images/pen.png" alt="pen" style="width:370px; height:236px">
             </div>
           </div>
