--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,14 +1,17 @@
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-48 w3-xxlarge">
   <a href="https://www.linkedin.com/in/dinu-gherciu-580444162" style= "text-decoration: none;">
-    <i class="fa fa-linkedin w3-hover-opacity"></i> 
+    <i class="fa fa-linkedin w3-hover-opacity" style="color: rgb(245, 245, 245)"></i> 
   </a>
   <a href="https://www.twitter.com/gherciudinu" style= "text-decoration: none;">
-    <i class="fa fa-twitter w3-hover-opacity"></i>  
+    <i class="fa fa-twitter w3-hover-opacity" style="color: rgb(245, 245, 245)"></i>  
   </a>
   <a href="https://www.facebook.com/dinu.gherciu" style= "text-decoration: none;">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>  
+    <i class="fa fa-facebook-official w3-hover-opacity" style="color: rgb(245, 245, 245)"></i>  
   </a>
+  <script src="/jquery/dist/jquery.min.js"></script>
+    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/javascripts/appclient.js"></script>
 </footer>
 </body>
 
