--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,4 +1,4 @@
-<% include partials/navigation.ejs %>
+<%- include('partials/navigation'); %>
 
   <div class="w3-padding-64" style="height:100vh; width:100%">
     <div class="w3-half w3-blue-grey w3-container" style="height:100%; width:100%">
@@ -21,4 +21,4 @@
       </div>
     </div>
     
-<% include partials/footer.ejs %>
+<%- include('partials/footer'); %>
