--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,6 +9,6 @@
     <%= title %>
   </title>
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.bundle.min.css">
   <link rel='stylesheet' href='@fortawesome/fontawesome-free/css/all.min.css' />
 </head>
